@@ -1,9 +1,10 @@
 irrlamb 0.2.0 -
 - Added joystick support
 - Added per-pixel lighting
+- Added three new levels
 - Made menus and fonts bigger
 - Can access options in-game now
-- Added shaders, anisotropic filtering, and MSAA to video options
+- Added shaders, anisotropic filtering, V-sync, and MSAA to video options
 - Added level names to menu
 - Fixed replay bug
 - Fixed memory leaks
